--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,36 @@
+#user  nobody;
+worker_processes  1;
+
+#error_log  logs/error.log;
+#error_log  logs/error.log  notice;
+#error_log  logs/error.log  info;
+
+#pid        logs/nginx.pid;
+daemon      off;
 
 
-server {
-    listen       80;
-    server_name  localhost;
+events {
+    worker_connections  1024;
+}
 
-    #charset koi8-r;
 
-    #access_log  logs/host.access.log  main;
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
 
-    location / {
-        content_by_lua_file /home/app/function/handler.lua;
-    }
+    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    #                  '$status $body_bytes_sent "$http_referer" '
+    #                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #error_page  404              /404.html;
+    #access_log  logs/access.log  main;
 
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   html;
-    }
+    sendfile        on;
+    #tcp_nopush     on;
 
+    #keepalive_timeout  0;
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
 }
